<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Image Section -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title Text Section -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="83dp"
        android:text="@string/get_started"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle Text Section -->
    <TextView
        android:id="@+id/undergroudtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="83dp"
        android:text="by creating a free account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- User Input Section -->
    <LinearLayout
        android:id="@+id/userInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconDrawable="@drawable/user"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        >

        <!-- Full Name Input Field -->
        <EditText
            android:id="@+id/etFullName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/full_name"
            android:drawableEnd="@drawable/person_24dp_5f6368_fill0_wght400_grad0_opsz24" /> <!-- Use hint instead of text -->

        <!-- Email Input Field -->
        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/enter_email"
            android:drawableEnd="@drawable/mail_24dp_5f6368_fill0_wght400_grad0_opsz24"
            />

        <!-- Phone Number Input Field -->
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/phone_number"
            android:drawableEnd="@drawable/phone_iphone_24dp_5f6368_fill0_wght400_grad0_opsz24" />

        <!-- Password Input Field -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/strong_password"
            android:drawableEnd="@drawable/lock_24dp_5f6368_fill0_wght400_grad0_opsz24" />
    </LinearLayout>

    <!-- Agreement Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/userInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/userInputLayout">

        <!-- Agreement CheckBox with increased touch target -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <CheckBox
                android:id="@+id/agreementCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_terms_conditions"
                android:buttonTint="@color/black" />
        </FrameLayout>

        <!-- Terms and Conditions Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="9sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="#6C63FF"
            android:textSize="9sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="9sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textColor="#6C63FF"
            android:textSize="9sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Submit Button Section -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="#6C63FF"
        android:text="@string/next_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Register Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="@+id/submitButton"
        app:layout_constraintTop_toBottomOf="@+id/submitButton">

        <!-- New Member Text -->
        <TextView
            android:id="@+id/memberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already a member?"
            android:textSize="13sp" />

        <!-- Register Now Text -->
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"
            android:textColor="#6C63FF"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
